# flex-arb

./: CHANGELOG.md  Dockerfile  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: release.yml
docs/: api.md  contributing.md  index.md
src/flexarb/: __init__.py  cli.py  proof_of_concept.py
src/flexarb/components/: __init__.py  country.py  link.py  orderbook.py  port.py
tests/: test_flexarb.py  test_proof_of_concept.py
